--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@splinetool/runtime": "^1.9.5",
 		"date-fns": "^3.6.0",
 		"date-fns-tz": "^3.1.3",
 		"firebase": "^10.12.4",
