--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.2.5",
 		"@sveltejs/kit": "^2.5.28",
-		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"@types/eslint": "^9.6.1",
 		"eslint": "^9.11.1",
 		"eslint-config-prettier": "^9.1.0",
@@ -29,8 +29,6 @@
 	"type": "module",
 	"dependencies": {
 		"@splinetool/runtime": "^1.9.27",
-		"date-fns": "^4.1.0",
-		"date-fns-tz": "^3.1.3",
 		"firebase": "^10.13.2",
 		"firestore": "^1.1.6"
 	}
