--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.2.5",
-		"@sveltejs/kit": "^2.5.28",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"@sveltejs/kit": "^2.6.1",
+		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@types/eslint": "^9.6.1",
 		"eslint": "^9.11.1",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.44.0",
+		"eslint-plugin-svelte": "^2.44.1",
 		"globals": "^15.9.0",
 		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"sass": "^1.79.3",
-		"svelte": "^5.0.0-next.258",
-		"svelte-preprocess": "^6.0.2",
+		"prettier-plugin-svelte": "^3.2.7",
+		"sass": "^1.79.4",
+		"svelte": "^5.0.0-next.260",
+		"svelte-preprocess": "^6.0.3",
 		"svelte-sitemap": "^2.6.0",
-		"vite": "^5.4.7"
+		"vite": "^5.4.8"
 	},
 	"type": "module",
 	"dependencies": {
-		"@splinetool/runtime": "^1.9.27",
+		"@splinetool/runtime": "^1.9.28",
 		"firebase": "^10.13.2",
 		"firestore": "^1.1.6"
 	}
