--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"type": "module",
 	"dependencies": {
 		"@splinetool/runtime": "^1.9.28",
+		"@vercel/analytics": "^1.3.1",
 		"firebase": "^10.13.2",
 		"firestore": "^1.1.6"
 	}
